--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <link rel="stylesheet" href="css/style.css">
+  <title>Musical Transcription</title>
 </head>
-
+ 
 <body>
   <div class="header">
-    <img class="header-logo" src="">
+    <img class="header-logo" src="images/logo.svg">
     <ul class="header-links">
-      <li><a href="">link one</a></li>
-      <li><a href=""></a>link two</li>
-      <li><a href=""></a>link three</li>
+      <li><a href=""></a>Services</li>
+      <li><a href=""></a>About</li>
+      <li><a href=""></a>Contact</li>
     </ul>
 
     <h1>Hero Text</h1>
@@ -23,7 +23,7 @@
       reprehenderit dolorum quam ab harum ipsam culpa perferendis accusantium natus sed laborum placeat, nam
       exercitationem!</p>
 
-    <img class="main-image" src="">
+    <img class="sheet-music" src="images/sheet-music.jpg" alt="folded sheet music">
 
     <button class=sign-up type="button">click me</button>
   </div>
