top section and first middle section written and styled

--- a/index.html
+++ b/index.html
@@ -8,24 +8,51 @@
   <link rel="stylesheet" href="css/style.css">
   <title>Musical Transcription</title>
 </head>
- 
+
 <body>
-  <div class="header">
-    <img class="header-logo" src="images/logo.svg">
-    <ul class="header-links">
-      <li><a href=""></a>Services</li>
-      <li><a href=""></a>About</li>
-      <li><a href=""></a>Contact</li>
-    </ul>
+  <div class="top-section">
+    <div class="header">
+      <h2 class="header-logo">Logo Text</h2>
+      <ul class="header-links">
+        <li><a href=""></a>Services</li>
+        <li><a href=""></a>About</li>
+        <li><a href=""></a>Contact</li>
+      </ul>
+    </div>
+    <div class="hero-container">
+      <div class="hero-content">
+        <h1>Hero Text</h1>
+        <p class="hero-subtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, sint? Molestiae corrupti
+          dolor quas laudantium
+          reprehenderit dolorum quam ab harum ipsam culpa perferendis accusantium natus sed laborum placeat, nam
+          exercitationem!</p>
+        <button class=sign-up type="button">click me</button>
+      </div>
+      <img class="sheet-music" src="images/sheet-music.jpg" alt="folded sheet music">
+    </div>
+  </div>
 
-    <h1>Hero Text</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, sint? Molestiae corrupti dolor quas laudantium
-      reprehenderit dolorum quam ab harum ipsam culpa perferendis accusantium natus sed laborum placeat, nam
-      exercitationem!</p>
+  <div class="middle-section-one">
+    <h2>Random Text Here</h2>
+    <div class="middle-content">
+      <div class="image-box">
+        <img src="images/maestro.jpg" class="section-one-image">
+        <div class="text">random words random words random words</div>
+      </div>
+      <div class="image-box">
+        <img src="images/scrapbooking.jpg" class="section-one-image">
+        <div class="text">random words random words random words</div>
+      </div>
+      <div class="image-box">
+        <img src="images/bird.jpg" class="section-one-image">
+        <div class="text">random words random words random words</div>
+      </div>
+      <div class="image-box">
+        <img src="images/background.jpg" class="section-one-image">
+        <div class="text">random words random words random words</div>
+      </div>
+    </div>
 
-    <img class="sheet-music" src="images/sheet-music.jpg" alt="folded sheet music">
-
-    <button class=sign-up type="button">click me</button>
   </div>
 
 </body>
