--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
   </div>
 
-  <div class="middle-section-one">
+  <div class="middle-section">
     <h2>Random Text Here</h2>
     <div class="middle-content">
       <div class="image-box">
@@ -52,9 +52,23 @@
         <div class="text">random words random words random words</div>
       </div>
     </div>
-
   </div>
 
+  <div class="middle-section-two">
+    <p class="quote"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod, est suscipit quisquam architecto
+      ratione
+      voluptatibus esse sit, dicta provident obcaecati quas. Odit quasi sit sed velit nam, accusantium ipsum quas!
+      Illo optio temporibus adipisci libero dicta, dignissimos id quis, numquam odio culpa vitae incidunt et quasi
+      totam. Laudantium soluta corrupti explicabo omnis commodi eum ratione accusamus dolorum nulla. Maxime, iste.
+      Deleniti velit ut odit minus reprehenderit excepturi error cumque consequatur placeat ullam obcaecati nesciunt
+      eaque dolorem quia delectus sit, officiis consectetur rem omnis! Nemo dolore in necessitatibus voluptas commodi
+      recusandae.
+      Dicta placeat fugiat at dolore quisquam accusantium voluptatum nobis provident, rerum suscipit voluptates? Id
+      beatae illum vero ad quos repudiandae nam placeat facere! Sit aut sunt dolorem at debitis doloribus!
+      Fugit quo omnis maxime! Eligendi saepe cumque culpa sapiente, veritatis laudantium voluptatum fugiat voluptatem,
+      quae nostrum magnam inventore provident tenetur similique, aliquid incidunt. Ex natus qui illum, aperiam optio
+      eum.<span class="author">By XYZ</span></p>
+  </div>
 </body>
 
 </html>
