added bottom section and footer

--- a/index.html
+++ b/index.html
@@ -62,12 +62,21 @@
       totam. Laudantium soluta corrupti explicabo omnis commodi eum ratione accusamus dolorum nulla. Maxime, iste.
       Deleniti velit ut odit minus reprehenderit excepturi error cumque consequatur placeat ullam obcaecati nesciunt
       eaque dolorem quia delectus sit, officiis consectetur rem omnis! Nemo dolore in necessitatibus voluptas commodi
-      recusandae.
-      Dicta placeat fugiat at dolore quisquam accusantium voluptatum nobis provident, rerum suscipit voluptates? Id
-      beatae illum vero ad quos repudiandae nam placeat facere! Sit aut sunt dolorem at debitis doloribus!
-      Fugit quo omnis maxime! Eligendi saepe cumque culpa sapiente, veritatis laudantium voluptatum fugiat voluptatem,
-      quae nostrum magnam inventore provident tenetur similique, aliquid incidunt. Ex natus qui illum, aperiam optio
-      eum.<span class="author">By XYZ</span></p>
+      recusandae.<span class="author">By XYZ</span></p>
+  </div>
+
+  <div class="bottom-section">
+    <div class="bottom-section-content">
+      <div class="bottom-text">
+        <h2 class="banner-title">Sign Up Today</h2>
+        <p class="banner-subtext">rsndom subtext random subtext</p>
+      </div>
+    <button type="button">click me</button>
+    </div>
+  </div>
+
+  <div class="footer">
+    <h3>Copyright David Lacey 2022</h3>
   </div>
 </body>
 
